--- a/main.tex
+++ b/main.tex
@@ -405,7 +405,7 @@ U(x,r,t) = U(x,t), \qquad V(x,r,t) = -\nu r \pdiff U x.
 
 %We consider a rod of circular cross section with the radius $R$ and use cylindrical coordinates $(x, r, \varphi)$ with the axial coordinate $x$, radial coordinate $r$ and angular coordinate $\varphi$. We use the Lagrangian description and denote the displacement vector by $\underline{U} = (U, V, W) $, where $ U $ is the axial displacement, $ V $ is the radial displacement and $ W $ is the torsion. 
 
-Рассмотрим стержень круглого поперечного сечения радиуса $R$. Введём цилиндрическую систему координат $(x, r, \varphi)$, где $x$ -- осевая координата, $r$ -- продольная, $\varphi$ -- угловая, как показано на рисунке \ref{fig:rod}. Будем использовать Лагранжев подход и введём вектор перемещения $\vect{U} = (U, V, W)$, где $U$ -- осевое (продольное) перемещение, $V$ -- радиальное (поперечное) перемещение, а $W$ -- вращение.
+Рассмотрим стержень круглого поперечного сечения радиуса $R$. Введём цилиндрическую систему координат $(x, r, \varphi)$, где $x$ -- осевая координата, $r$ -- продольная, $\varphi$ -- угловая, как показано на рисунке \ref{fig:rod}. Положим стержень бесконечным вдоль оси $x$. Используя Лагранжев подход, введём вектор перемещения точек тела: $\vect{U} = (U, V, W)$, где $U$ -- осевое (продольное) перемещение, $V$ -- радиальное (поперечное) перемещение, а $W$ -- вращение.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.33\textwidth]{Fig1}
@@ -420,7 +420,7 @@ U(x,r,t) = U(x,t), \qquad V(x,r,t) = -\nu r \pdiff U x.
 \end{equation}
 где $I_1(\tens{E}) = \trace \tens{E},\  I_2(\tens{E}) = \lsq(\trace \tens{E})^2 - \trace \tens{E}^2\rsq/\,2,\ I_3(\tens{E}) = \trace \tens{E}$ являются инвариантами тензора деформации Грина
 $\tens{E} = \lb (\nabla\vect{U})^T + \nabla\vect{U} + (\nabla\vect{U})^T\cdot\nabla\vect{U} \rb / \, 2$, 
-$\lambda$,~$\mu$ -- коэффициенты Ламе, $l$,~$m$,~$n$ -- модули Мурнагана. Здесь и далее в тексте работы все частные производные берутся по координатам в отсчётной конфигурации. Отметим, что модель Мурнагана используется здесь потому, что она является общей моделью слабо нелинейных упругих деформаций.
+$\lambda$,~$\mu$ -- коэффициенты Ламе, $l$,~$m$,~$n$ -- модули Мурнагана. Здесь и далее в тексте работы все частные производные берутся по координатам в отсчётной конфигурации. Отметим, что модель Мурнагана является общей моделью слабо нелинейных упругих деформаций.
 %Here, and in the following, all spatial derivatives are taken with respect to the natural (underformed) coordinates {\color{red} in the reference configuration. It is worth noting that the Murnaghan model is used here in the sense of the general weakly-nonlinear theory of elasticity, assuming small values of strain (see the discussion in \cite{DSS}).}
 
 
@@ -481,7 +481,7 @@ V(x,r,t) &= r V_1(x,t) + r^3 V_3(x,t) + r^5 V_5(x,t) + \dots \, .
 \begin{equation}\label{2_longitud_cond}
 \pdiff{U}{r} = 0, \quad V = 0 \quad \text{при} \quad r = 0,
 \end{equation}
-из которых следует, что $U_1 = V_0 = 0$. В линейной задаче равенство нулю этих двух слагаемых достаточно, для того, чтобы все слагаемые $U_{2k+1}$ и $V_{2k}$ были равны нулю. Для нелинейной задачи тоже можно показать справедливость этого утверждения, однако, чтобы не слишком усложнять вывод, примем эти разложения в качестве допущения. Кроме того, в отличие от~\cite{DF}, мы сведём задачу к одному уравнению типа Буссинеска, учтём ненулевое осесимметричное напряжение, приложенное к поверхности стержня, а также рассмотрим предварительно растянутый стержень.
+из которых следует, что $U_1 = V_0 = 0$. В линейной задаче из равенства нулю этих двух слагаемых автоматически следует, что все слагаемые $U_{2k+1}$ и $V_{2k}$ тоже равны нулю. Для нелинейной задачи тоже можно показать справедливость этого утверждения, однако, чтобы не слишком усложнять вывод, примем эти разложения в качестве допущения. Кроме того, в отличие от~\cite{DF}, мы сведём задачу к одному уравнению типа Буссинеска, учтём ненулевое осесимметричное напряжение, приложенное к поверхности стержня, а также рассмотрим предварительно растянутый стержень.
 
 Введём масштабные множители, выделяющие среди прочих задачу о распространении длинных по сравнению с радиусом стержня волн малой амплитуды. Тогда безразмерные переменные и функции определяются следующими выражениями:
 %Рассмотрим длинные по сравнению с радиусом стержня волны малой амплитуды. Для этого введём масштабные множители и безразмерные переменные и функции:
@@ -744,7 +744,7 @@ u_{tt} - c^2 u_{xx} = \frac{\beta_1}{2\rho}\left(u^2\right)_{xx} -  R^2 \bigg(\f
 \begin{equation}\label{eq_dim_SP}
 u_{tt} - c^2 u_{xx} =  \frac{\beta_1}{2 \rho} (u^2)_{xx} - \frac{\nu (1-\nu) R^2}{2} u_{xxtt} + \frac{\nu c^2 R^2}{2} u_{xxxx},
 \end{equation}
-и уравнением, выведенным Островским и Сутиным~\cite{OS}:
+и <<регуляризованным>> уравнением, выведенным Островским и Сутиным~\cite{OS}:
 \begin{equation}\label{eq_dim_OS}
 u_{tt} - c^2 u_{xx} =  \frac{\beta_1}{2 \rho} (u^2)_{xx} + \frac{\nu^2 R^2}{2} u_{xxtt}.
 \end{equation}
@@ -762,18 +762,18 @@ u_{tt} - c^2 u_{xx} =  \frac{\beta_1}{2 \rho} (u^2)_{xx} + \frac{\nu^2 R^2}{2} u
 \end{align}
 
 %Moreover, we note that all four Boussinesq-type models shown above are not asymptotically exact equations, i.e. in non-dimensional form they include both $O(1)$ and $O(\varepsilon)$ terms, and if we regularise both equations (\ref{eq_dim_free_surf}) and (\ref{eq_dim_SP}) using the leading order relation $ u_{tt} = c^2 u_{xx} + \dots$, all three equations will reduce to the asymptotically equivalent equation (\ref{eq_dim_OS}). However, the models have different dispersive properties, and, similarly to the linear studies (see \cite{bostrm2000} and references to the classical linear results therein), it would be interesting to compare the performance of these four nonlinear models with the exact (numerical) solution of the problem.  We also note that the three dispersive terms present in the equation (\ref{eq_dim_free_surf}) are similar to the dispersive terms in the Boussinesq-type equation derived from a nonlinear lattice model for a waveguide in \cite{KSZ}. 
-Отметим, что все четыре приведённые выше модели не являются асимптотически точными уравнениями, т.е. в безразмерной форме они содержат как члены $ O(1) $, так и $ O(\varepsilon) $. Следовательно, все эти уравнения могут быть <<регуляризованы>> (сведены) к одному уравнению, в котором есть только одно дисперсионное слагаемое, используя отношение в главном порядке $ u_{tt} = c^2 u_{xx} + \mbox{<\,малые члены\,>} $. Коэффициент при этом дисперсионном слагаемом является суммой всех дисперсионных коэффициентов и одинаков для всех четырех уравнений:
+Отметим, что все четыре приведённые выше модели не являются асимптотически точными уравнениями, т.е. в безразмерной форме они содержат как члены $ O(1) $, так и $ O(\varepsilon) $. Следовательно, все эти уравнения могут быть <<регуляризованы>> (сведены) к одному уравнению, в котором есть только одно дисперсионное слагаемое, используя соотношение в главном порядке $ u_{tt} = c^2 u_{xx} + \mbox{<\,малые члены\,>} $. Коэффициент при этом дисперсионном слагаемом определяется суммой дисперсионных коэффициентов $\alpha_j$ и одинаков для всех четырех уравнений:
 %We note that all four Boussinesq-type models shown above are not asymptotically exact equations, i.e. in non-dimensional form they include both $O(1)$ and $O(\varepsilon)$ terms. Hence all these equations can be ``regularised'' to the form where there is just one dispersive term, using the leading order relation $ u_{tt} = c^2 u_{xx} + \dots \;$. Coefficient of that dispersive term is a sum of all dispersive coefficients and it is the same for all four equations:
 \begin{equation} \label{alpha_sum}
 \alpha_1^{(i)} + \alpha_2^{(i)} + \alpha_3^{(i)} = -\frac{\nu^2}{2}, \quad i = \overline{1,4},
 \end{equation}
 что означает, что эти уравнения асимптотически эквивалентны.
-Однако до регуляризации модели обладают различными дисперсионными свойствами, и, подобно линейным исследованиям~\cite{bostrm2000}, было бы интересно сравнить характеристики этих четырех нелинейных моделей с численным решением полной нелинейной задачи. {\color{red} Скорректировать после описания численных экспериментов} 
+%Однако до регуляризации модели обладают различными дисперсионными свойствами, и, подобно линейным исследованиям~\cite{bostrm2000}, было бы интересно сравнить характеристики этих четырех нелинейных моделей с численным решением полной нелинейной задачи. {\color{red} Скорректировать после описания численных экспериментов} 
 %Также отметим, что три дисперсионных члена, присутствующих в уравнениях (\ref{eq_dim_free_surf}) алогичны дисперсионным членам в уравнении типа Буссинеска, полученных из нелинейной решеточной модели для волновода в~\cite{KSZ}. 
 
 %{\color{red} We note that regularisation of the type discussed above has been developed independently by T.B. Benjamin, J.L. Bona and J.J. Mahony in the context of fluids \cite{BBM}, and by P. Rosenau, and M.B. Rubin, P. Rosenau and O. Gottlieb, in the context of solids \cite{R, RRG}.}
 
-Поскольку модель с одним дисперсионным членом проще, чем модель с тремя дисперсионными членами, представляется целесообразным получить регуляризованную модель с внешним воздействием. Из уравнения \eqref{eq_u0_def_1} следует асимптотическое соотношение 
+Поскольку модель с одним дисперсионным членом проще, чем модель с тремя дисперсионными членами, представляется целесообразным получить регуляризованную модель с внешним воздействием. Из безразмерного уравнения \eqref{eq_u0_def_1} следует асимптотическое соотношение 
 \begin{equation}\label{key}
 u_{tt} = u_{xx} + 2(\nu P_{xx} + T_{x}) + \mathcal{O}(\varepsilon),
 \end{equation}
@@ -784,11 +784,15 @@ u_{tt} = u_{xx} + 2(\nu P_{xx} + T_{x}) + \mathcal{O}(\varepsilon),
 & + \frac{R^2}{4} \lb\frac{1-\nu}{\rho}P_{xxxx} - \frac{1-3\nu+4\nu^3}{E}P_{xxtt}\rb + \frac{(1+\nu)R}{2}\lb \frac{1}{E}T_{xtt} - \frac{1}{\rho}T_{xxx} \rb = 0, \quad i = 1,2.
 \end{split}
 \end{equation}
+Уравнение \eqref{2_eq_fin_reg} является обобщением уравнения \eqref{eq_dim_OS} на случай ненулевых напряжений на поверхности.
+
+Отметим, что в некоторых исследованиях, в частности, Самсонова и Порубова~\cite{SP, S_book, P_book}, для вывода модели типа Буссинеска использовались асимптотические разложения перемещений по малому параметру, а не степенные разложения по поперечной координате (радиусу). В следующем пункте мы кратко покажем, что, используя такой подход, можно получить уравнение (\ref{eq_dim},~$i=1$).
 
 
 
 \subsection{Вывод с помощью асимптотического разложения}
-В этом разделе предложен вывод уравнения \eqref{eq_u0_def_fin} из полной постановки задачи \eqref{2_eq1_0} и \eqref{2_eq2_0}, используя менее жёсткие предположения о форме асимптотических разложений перемещений и, следовательно, обосновывая разложения \eqref{u_series} в виде степенного ряда по радиальной переменной, использованные в предыдущем разделе.
+%В некоторых исследованиях для вывода модели типа Буссинеска использовались асимптотические разложения по малому параметру~\cite{S_book}.
+В этом пункте предложен вывод уравнения \eqref{eq_u0_def_fin} из полной постановки задачи \eqref{2_eq1_0} и \eqref{2_eq2_0}, используя менее жёсткие предположения о форме асимптотических разложений перемещений и, следовательно, обосновывая разложения \eqref{u_series} в виде степенного ряда по радиальной переменной, использованные в предыдущем разделе.
 
 Введём безразмерные переменные так, как это было сделано ранее в \eqref{scales1}, изменив лишь масштаб радиуса: %и поперечного перемещения:
 \begin{equation}\label{2_scales_modif}
@@ -905,11 +909,12 @@ U_4(x, r, t) &= r^4 a_{10} U_{0tttt} + r^2 \left(b_5(r) U_{0xxxx} + b_6(r) U_{0x
 \end{split}
 \end{align}
 Здесь функции $b_i(r) = b_{i}^{(2)}r^2 + b_{i}^{(0)}$, коэффициенты $a_i$ и $b_{i}^{(j)}$ зависят от упругих модулей $\lambda, \mu, l, m, n$ и плотности $\rho$.
-
-Итоговое уравнение, следующее из \eqref{2_bc_rx_2} после подстановки $V_1$, $U_2$, $V_3$ и $U_4$ совпадает с ранее выведенным уравнением~\eqref{eq_u0_asympt}.
+Итоговое уравнение, следующее из \eqref{2_bc_rx_2} после подстановки $V_1$, $U_2$, $V_3$ и $U_4$, совпадает с ранее выведенным уравнением~\eqref{eq_u0_asympt}, из которого следует уравнение~(\ref{eq_dim},~$i=1$).
 
 
 \section{Вывод уравнения типа Буссинеска с внешним воздействием \\ в растянутом стержне}
+Некоторые исследователи рассматривали задачу о распространении длинных продольных волн в предварительно растянутом стержне~\cite{DF}. Вывод уравнений, предложенный в предыдущем параграфе, позволяет легко учесть это растяжение.
+
 Рассмотрим распространение продольных волн в равномерно растянутом вдоль своей оси стержне. Продольное перемещение в растянутом состоянии представляется в виде:
 %In this section we consider the propagation of longitudinal waves in the uniformly pre-stretched rod (in the axial direction). The longitudinal displacement in the pre-stretched state  is given by
 \begin{equation}\label{pre_stretch_u}
@@ -965,8 +970,10 @@ u_{tt} - \left(c^2 + \kappa\frac{\beta_1}{\rho}\right) u_{xx} - \frac{2}{\rho}\l
 %&\quad+ R^2 \left(\frac{\alpha_1^{(i)}}{c^2} u_{tttt} + \alpha_2^{(i)} u_{xxtt} + c^2\alpha_3^{(i)} u_{xxxx} \right) = 0, \quad i = 1,2.
 %\end{split}
 %\end{equation}
+Предварительное растяжение изменило скорость длинных линейных волн, квадрат которой равен коэффициенту при $u_{xx}$. 
+Это явление называется акустоэластическим эффектом и изучалось в~\cite{HughesKelly, ADO}. Отметим, что акустоэластический эффект используется для экспериментального определения упругих модулей Мурнагана.
 
-Отметим, что акустоэластический эффект (изменение скорости линейной волны в растянутой среде) изучался в~\cite{HughesKelly, ADO}. Насколько известно автору, обе модели, описываемые уравнениями (\ref{pre_stretch_eq_dim}), а также их упрощённые версии (\ref{eq_dim}) и (\ref{eq_dim_free_surf}), получены впервые.
+Насколько известно автору, обе модели, описываемые уравнениями (\ref{pre_stretch_eq_dim}), а также их упрощённые версии (\ref{eq_dim}), (\ref{eq_dim_free_surf}) и \eqref{2_eq_fin_reg}, получены впервые. В следующем параграфе мы проанализируем свойства полученных уравнений и сравним их с уравнениями выведенными ранее.
 %We note that the acoustoelastic effect (modification of the linear wave speed in a pre-stressed media) has been studied in \cite{HughesKelly, ADO, P} (see also references therein). To the best of our knowledge, both models derrived in our paper and described by the equations (\ref{pre_stretch_eq_dim}) (as well as their reduced versions (\ref{eq_dim}) and (\ref{eq_dim_free_surf})) have not been obtained before.
 
 
@@ -994,10 +1001,10 @@ p^2 = \frac{\rho \omega^2}{\lambda + 2\mu} - k^2, \quad q^2 = \frac{\rho \omega^
 	\label{fig:disp}
 \end{figure} 
 
-Все модели достаточно хорошо описывают нижнюю ветвь дисперсионной кривой в длинноволновой области. Уравнение Самсонова-Порубова \eqref{eq_dim_SP} обладает коротковолновой неустойчивостью, в то время как остальные три модели не имеют такого эффекта. Отметим, что коротковолновая неустойчивость затрудняет численный счёт, поскольку высокочастотные гармоники в таком случае могут неограниченно возрастать. Полученные в настоящей работе уравнения \eqref{eq_dim_free_surf} в отличие от других уравнений улавливают вторую ветвь дисперсионной кривой, правда описывают её очень неточно. 
+Все модели достаточно хорошо описывают нижнюю ветвь дисперсионной кривой в длинноволновой области, однако наиболее точной является модель (\ref{eq_dim_free_surf}, $i=2$). Уравнение Самсонова -- Порубова \eqref{eq_dim_SP} обладает коротковолновой неустойчивостью, в то время как остальные три модели не имеют такого эффекта. Отметим, что коротковолновая неустойчивость затрудняет численный счёт, поскольку высокочастотные гармоники в таком случае могут неограниченно возрастать. Полученные в настоящей работе уравнения \eqref{eq_dim_free_surf} в отличие от других уравнений улавливают вторую ветвь дисперсионной кривой, правда описывают её очень неточно: помимо большого отличия по значению, эти кривые имеют всюду положительный наклон, тогда как точная кривая имеет отрицательный наклон в области длинных волн, что соответствует отрицательной групповой скорости.
 %Уравнение (\ref{eq_dim_free_surf}, $i=2$) лучше описывает нижнюю ветвь для коротких волн, в то время как (\ref{eq_dim_free_surf}, $i=1$) обладает лучшими дисперсионными свойствами как длинноволновая модель.
 
-Отметим, что улавливание ещё одной моды колебаний в численном моделировании является скорее недостатком, чем преимуществом, поскольку к длинным продольным волнам, для изучения которых была построена модель, подмешиваются другие колебания.
+%Отметим, что улавливание ещё одной моды колебаний в численном моделировании является скорее недостатком, чем преимуществом, поскольку к длинным продольным волнам, для изучения которых была построена модель, подмешиваются другие колебания.
 %All models reasonably well describe the lowest branch of the dispersion curves for the long waves. Eq. (\ref{eq_dim_SP})  suffers from a short-wave instability, while other three models do not have this defect. Eq. (\ref{eq_dim_free_surf}) for $i=1,2$, capture the presence of the second branch. We also note that, at least in this example, eq. (\ref{eq_dim_free_surf}) for $i=1$ has better dispersive properties than eq. (\ref{eq_dim_free_surf}) for $i=2$ (as a long-wave model). However, eq. (\ref{eq_dim_free_surf}) for $i=2$ better describes the lowest branch in the short wave region. 
 %One can expect that both derived Boussinesq-type models in (\ref{eq_dim_free_surf}) can be useful, depending on the type of the dominant dispersive radiation in the problem under study. One could also try to artificially ``optimise" the dispersive properties as discussed, for example, in \cite{PAT, ADKM}. However, in this paper we were interested in the ``natural" derivation of Boussinesq-type models.
 
@@ -1018,7 +1025,7 @@ B_4 &= \sqrt{\frac{A\beta_1}{(6E + 2A\beta_1)\nu^2 R^2}},
 \end{align}
 для уравнений \eqref{eq_dim_free_surf}, \eqref{eq_dim_SP} и \eqref{eq_dim_OS} соответственно. Получению солитонных решений посвящено Приложение 2.
 
-На рисунке \ref{fig:soliton} в левой части изображены четыре солитона, задаваемых формулами (\ref{soliton}) -- (\ref{B4}) и имеющих амплитудный параметр $A = -0.07$. Видно, что все четыре солитона имеют разную длину, причём <<регуляризованный>> солитон (\ref{B4}) самый длинный. Однако солитоны такой амплитуды вызывают напряжения близкие к пределу упругости для полистирола. В экспериментах с полистироловым стержнем, описанных в~\cite{Garbuzov}, амплитуда очень мала: $A \sim 10^{-3} - 10^{-4}$. Следовательно, в главном порядке по $A$ во всех четырёх формулах параметр длины примерно равен
+На рисунке \ref{fig:soliton} в левой части изображены четыре солитона, задаваемых формулами (\ref{soliton}) -- (\ref{B4}) и имеющих амплитудный параметр $A = -0.07$. Видно, что все четыре солитона имеют разную длину, причём <<регуляризованный>> солитон (\ref{B4}) самый длинный. Однако солитоны такой амплитуды вызывают напряжения близкие к пределу упругости для полистирола. В экспериментах с полистироловым стержнем, описанных в~\cite{Garbuzov}, амплитуда очень мала: $A \sim 10^{-3} - 10^{-4}$, следовательно, в главном порядке по $A$ во всех четырёх формулах параметр длины примерно равен
 %In the left part of the Figure \ref{fig:soliton} we plot the four solitons given by the formulae (\ref{soliton}) - (\ref{B4}) for one and the same value of the amplitude parameter $A = -0.05$ and the same elastic moduli shown in Table \ref{tab:ps} (typical for a polystyrene \cite{HughesKelly}). We can see that the four solitons have a different width, with the regularised soliton (\ref{B4}) being the widest. However, this figure is plotted for the value of $A$ which exceeds the yield point for the polystyrene, and therefore in practice this difference would not be important for that particular material (but could be important for some other materials). Indeed, in experiments with polystyrene discussed in the next section the value of $A$ is very small, $A \sim 10^{-3} - 10^{-4}$. Therefore, to leading order in $A$, all four formulae will give the width parameter approximately equal to 
 \begin{equation}\label{}
 B = \sqrt{\frac{A\beta_1}{6\nu^2 E R^2}},
@@ -1076,8 +1083,8 @@ u_i(x, t) &= \frac{3 \rho \left(v^2 - c^2\right)}{\beta_1} {\rm sech}^{2}\left[\
 
 Таким образом, в то время как первые три модели дают ограниченный диапазон скоростей солитона сжатия, регуляризованная модель не накладывает ограничения сверху на скорость. Также первые две модели, в отличие от двух других, допускают существование солитонов растяжения. 
 
-Отметим, что помимо математического ограничения на параметры солитона (вещественность параметра ширины $B$) есть физическое ограничение: солитон не должен вызывать пластических деформаций, поскольку модель строилась только для упругих деформаций. Так, для полистирола и широкого круга других материалов именно физическое ограничение сильнее всего сужает диапазон допустимых скоростей, ведь амплитуда солитона пропорциональна $v^2-c^2$. 
-Длинные волны в стержнях из таких материалов целесообразнее всего моделировать с помощью регуляризованной модели, являющейся наиболее простой среди рассмотренных моделей и в рамках которой не учитываются колебания других мод, а также отсутствует коротковолновая неустойчивость.
+Отметим, что помимо математического ограничения на параметры солитона (вещественность параметра ширины $B$) есть физическое ограничение: солитон не должен вызывать пластических деформаций, поскольку модель строилась только для упругих деформаций. Так, для полистирола и широкого круга других материалов именно физическое ограничение сильнее всего сужает диапазон допустимых скоростей, поскольку, как видно из формулы \eqref{soliton_v}, чем больше разность ${v^2-c^2}$, тем больше амплитуда и меньше длина солитона.
+%Длинные волны в стержнях из таких материалов целесообразнее всего моделировать с помощью регуляризованной модели, являющейся наиболее простой среди рассмотренных моделей и в рамках которой не учитываются колебания других мод, а также отсутствует коротковолновая неустойчивость.
 
 %Отметим, что все модели выведены в предположении малой амплитуды деформаций, которая пропорциональна относительной разнице $v^2$ и $c^2$. Однако все ограничения сверху на скорость солитона в стержне, например, из материала с $\nu\approx\frac13$ относительно далеки от $c^2$. Однако теоретически могут быть материалы с такими упругими характеристиками 
 %Thus, while the first three model equations give a finite range for the speeds of compression solitary waves, the regularised model does not impose an upper bound (see also the related discussions in  \cite{S_book}). Also, the first two models allow for the existence of solitons of opposite polarity, while the other two models do not allow that.   It would be interesting to compare the predictions for the permissible range of soliton speeds and polarities with direct numerical simulations of the full problem formulation. This could guide some future laboratory experiments.
@@ -1120,18 +1127,24 @@ u_i(x, t) &= \frac{3 \rho \left(v^2 - c^2\right)}{\beta_1} {\rm sech}^{2}\left[\
 &\qquad\qquad\qquad\qquad + S^4\gamma_1 P_{xxxx} + S^2\gamma_2 P_{xxtt} + S\gamma_3 T_{xtt} + S^3\gamma_4 T_{xxx} = 0, \quad x\in(0, 2\pi),
 \end{split}
 \end{equation}
-Будем искать неизвестную функцию в виде комбинации из $N$ гармоник:
+Будем искать приближённое решение $u_N$ в виде комбинации из $N$ гармоник:
 \begin{equation}\label{3_spect_approx}
-u(x, t) = \sum_{k=-N/2+1}^{N/2} \widehat u(k, t) e^{ikx}, \quad x\in(0, 2\pi).
+u_N(x, t) = \sum_{k=-N/2+1}^{N/2} \widehat u(k, t) e^{ikx}, \quad x\in(0, 2\pi).
 \end{equation}
-%Основная идея метода заключается в подстановке \eqref{3_spect_approx} в уравнение \eqref{3_bq_reg_scaled}, решение его в пространстве Фурье $\widehat{u}$ и 
-Для нахождения коэффициентов $\widehat u(k, t)$ при гармониках по значениям в узлах сетки используется дискретное преобразование Фурье (ДПФ), а для обратной операции -- обратное ДПФ:
+Ключевая идея псевдоспектрального метода заключается в поиске таких коэффициентов $\widehat u(k, t)$, что точное решение $u$ совпадает с приближённым решением $u_N$ в точках коллокации $x_j$:
+\begin{equation}\label{3_pseudo_sp_approx}
+u_N(x_j, t) = u(x_j, t), \quad x_j = \frac{2\pi j}{N-1}, \quad j=0,\dots, N-1.
+\end{equation}
+Из условия \eqref{3_pseudo_sp_approx} естественным образом вытекает применение дискретного преобразования Фурье (ДПФ) для нахождения $\widehat u(k, t)$, а для обратной операции -- обратного ДПФ:
+%Для нахождения коэффициентов $\widehat u(k, t)$ при гармониках по значениям в узлах сетки используется дискретное преобразование Фурье (ДПФ), а для обратной операции -- обратное ДПФ:
 \begin{align}\label{3_dft}
 \widehat u(k, t) &= \mathcal{F} u = \sum_{j=0}^{N-1} u(x_j, t) e^{-ikx_j}, \quad k=-\frac N 2 + 1, \dots, \frac N 2,\\
 \label{3_idft}
-u(x_j, t) &= \mathcal{F}^{-1} \widehat u = \sum_{k=-N/2+1}^{N/2} \widehat u(k, t) e^{ikx_j}, \quad x_j = \frac{2\pi j}{N-1}, \quad j=0, \dots, N-1.
+u(x_j, t) &= \mathcal{F}^{-1} \widehat u = \frac1N \sum_{k=-N/2+1}^{N/2} \widehat u(k, t) e^{ikx_j}, \quad x_j = \frac{2\pi j}{N-1}, \quad j=0, \dots, N-1.
 \end{align}
-Применим ДПФ к уравнению \eqref{3_bq_reg_scaled} и начальным условиям \eqref{3_bq_iv}. Приравнивая коэффициент при каждой гармонике к нулю, получим систему ОДУ с начальными условиями в виде:
+Отметим, что использование ДПФ выгодно с вычислительной точки зрения, поскольку для его реализации есть алгоритм быстрого преобразования Фурье.
+
+Применим ДПФ к уравнению \eqref{3_bq_reg_scaled} и начальным условиям \eqref{3_bq_iv}. Приравнивая коэффициент при каждой гармонике к нулю, получаем систему дифференциальных уравнений с начальными условиями в виде:
 \begin{gather}\label{3_bq_reg_dft}
 \begin{split}
 \lb 1 - \tilde{\alpha} S^2 k^2\rb\widehat u'' =&  -S^2 k^2 \lb c^2 \widehat u + \tilde \beta_1 \widehat{u^2} + \tilde\beta_2\widehat{uP} + \tilde{\beta}_3\widehat{P^2} \rb + S^2 g_1 \widehat{P_{xx}} - S g_2 \widehat{T_x} \\
@@ -1141,32 +1154,51 @@ u(x_j, t) &= \mathcal{F}^{-1} \widehat u = \sum_{k=-N/2+1}^{N/2} \widehat u(k, t
 \widehat{u}_0(k) = \widehat{\phi}(k), \qquad \widehat{u}_0'(k) = \widehat{\psi}(k), \qquad k=-\frac N 2 + 1, \dots, \frac N 2,
 \end{gather}
 где штрих обозначает производную по времени.
-Для нахождения Фурье образа нелинейного слагаемого $u^2$, а также $uP$, к Фурье образу $\widehat u$ применяется обратное преобразование, затем полученная функция $u(x_j, t)$ возводится в квадрат в узлах сетки или домножается на $P(x_j, t)$ и переводится обратно в пространство Фурье:
+Для нахождения Фурье образа нелинейного слагаемого $u^2$, а также $uP$, к функции $\widehat u$ применяется обратное преобразование, затем полученная функция $u(x_j, t)$ возводится в квадрат в узлах сетки или домножается на $P(x_j, t)$ и переводится обратно в пространство Фурье:
 $$
 \widehat{u^2} = \mathcal{F}\lbrack\lb\mathcal{F}^{-1}\widehat u\rb^2\rbrack, \qquad \widehat{uP} = \mathcal{F}\lbrack P\cdot \mathcal{F}^{-1}\widehat u\rbrack.
 $$
+Такой метод при использовании быстрого преобразования Фурье позволяет эффективно вычислять $\widehat{u^2}$ и $\widehat{uP}$.
 Решать систему \eqref{3_bq_reg_dft}, \eqref{3_bq_dft_iv} будем с помощью метода Рунге-Кутты 4-го порядка. Применяя обратное ДПФ к решению этой системы, получаем приближение исходной задачи Коши \eqref{3_bq_reg}, \eqref{3_bq_iv}.
 
-\subsection{Полные трёхмерные уравнения}
-Разрабатывая численную схему для решения полных уравнений, мы задались целью сделать её пригодной для как можно более широкого круга численных экспериментов. Во-первых, схема должна подходить для моделирования эволюции некоторого начального импульса (решение задачи Коши на периодическом интервале). Во-вторых, должна быть возможность моделировать волны, возникающие в результате некоторого внешнего воздействия ...
+Аналогичным образом можно дискретизировать нерегуляризованные уравнения (\ref{eq_dim}) с тремя дисперсионными слагаемыми, однако возникающая система обыкновенных дифференциальных уравнений 4-го порядка оказывается жёсткой и не поддаётся решению явными методами. В настоящей работе много времени было потрачено на реализацию псевдоспектрального метода для полных уравнений, описанию которого посвящён следующий параграф, поэтому задачу о численном моделировании уравнений \eqref{eq_dim} было решено оставить на будущее.
 
-Рассмотрим осесимметричный стержень круглого сечения длиной $L$ и радиусом $R$.
-Выпишем полные уравнения движения и граничные условия в векторном виде:
+\subsection{Полные трёхмерные уравнения}
+Разрабатывая численный метод для решения полных уравнений, мы задались целью сделать его пригодным для как можно более широкого круга численных экспериментов. Во-первых, метод должен подходить для моделирования эволюции некоторого начального импульса (решение задачи Коши на периодическом интервале). Во-вторых, должна быть возможность моделировать волны, возникающие в результате внешнего воздействия, как на боковую поверхность, так и на торец стержня (решение начально-краевой задачи на некотором конечном, но достаточно длинном интервале). В третьих, мы хотели бы учитывать в будущем не только осесимметричную деформацию, т.е. случай, когда перемещение зависит от угловой координаты $\varphi$.
+
+Для того, чтобы выполнить поставленные цели, мы реализовали метод с возможностью выбора различных базисов для разных координат (например, базис Фурье для $x$ и базис Лежандра для $r$). Для возможности моделирования уравнений в длинных стержнях с высокой точностью без рассмотрения гармоник или полиномов большой степени, мы реализовали многодоменный метод, позволяющий разбить область по осевой координате на несколько подобластей (доменов). Например, если нужно иметь 1000 точек коллокации по оси $x$, то, чтобы избежать учёт полиномов 1000-й степени, можно разбить область на 50 подобластей и на каждой подобласти использовать полиномы до 20-й степени.
+
+Опишем метод подробнее. Пусть имеется однородный стержень круглого сечения длиной $L$ и радиусом $R$.
+Выпишем полные уравнения движения, граничные и начальные условия в векторном виде:
 \begin{align}
 \label{3_eqns_full}
-&\rho \ddot{\vect{U}}(\vect{X}, t) = \nabla\cdot\tens{P},\quad \vect{X} \in \Omega = \lbrace(x, r, \varphi) \in \mathbb{R}^3 \, | \, -L<x<L, \; 0<r<R, \; 0<\varphi<2\pi\rbrace,\\
+&\ddot{\vect{U}}(x, r, \varphi, t) = \frac1\rho \nabla\cdot\tens{P},\quad L_1<x<L_2, \quad 0<r<R, \quad 0<\varphi<2\pi,\\
 \label{3_bc_full}
 &\tens{P} \cdot \vect{n} = \vect{P_b}, \quad r = R,\\
 %&\vect{U}\big|_{x=0} = \vect{U}\big|_{x=L},\\
+\label{3_iv_full}
+&\vect{U}(x,r,\varphi,0) = \vect{U}_0(x,r,\varphi), \quad \vect{\dot U}(x,r,\varphi,0) = \vect{\dot U}_0(x,r,\varphi),\\
+\label{3_stress}
 &\tens{P} = \lambda \lb\trace{\tens{E}}\rb \tens{\mathcal{I}} + 2\mu \tens{E} + l \lb\trace{\tens{E}}\rb^2 \tens{\mathcal{I}} - m\lb \lb\trace{\tens{E}}\rb^2\tens{\mathcal{I}} - 2\lb\trace{\tens{E}}\rb\tens{E} - \lb\trace{\tens{E}^2}\rb\tens{\mathcal{I}}\rb + n\lb\tens{E}^*\rb^T,\\
+\label{3_strain}
 &\tens{E} = \frac12 \lb \nabla\vect{U}^T + \nabla\vect{U} + \nabla\vect{U}^T \cdot \nabla\vect{U} \rb,
 \end{align}
-где $\tens{E}^*$ -- союзная матрица, а $\mathcal{I}$ -- единичный тензор.
-Будем искать решение этой задачи в некотором конечномерном пространстве, задаваемым системой базисных функций $\lbrace\Phi_n(x), \Psi_m(r), \Theta_l(\varphi)\rbrace$. Представим неизвестную функцию $\vect{U}$ в виде 
-\begin{equation}\label{3_spect_expan}
-\vect{U}(x,r,\varphi,t) = \sum a(t) \Phi_n(x) \Psi_m(r) \Theta_l(\varphi)
-\end{equation}
-Подстановка \eqref{3_spect_expan} в уравнения \eqref{3_eqns_full} приводит к системе однородных дифференциальных уравнений по времени.
+где $\tens{E}^*$ -- союзная матрица, а $\tens{\mathcal{I}}$ -- единичный тензор.
+Будем искать решение этой задачи в некотором конечномерном пространстве, задаваемым системой базисных функций $\Phi_n(x), \Psi_m(r), \Theta_l(\varphi)$. Представляя приближённое решение $\vect{U}_{NML}$ в спектральном виде и требуя, чтобы приближённое решение совпадало с точным в точках коллокации, получаем:
+\begin{align}
+\label{3_spect_approx_full}
+&\vect{U}_{NML}(x,r,\varphi,t) = \sum_{n,m,l} \vect{\widehat{U}}(n,m,l,t) \Phi_n(x) \Psi_m(r) \Theta_l(\varphi),\\
+\label{3_pseudo_sp_approx_full}
+\begin{split}
+&\vect{U}_{NML}(x_i, r_j, \varphi_k, t) = \vect{U}(x_i, r_j, \varphi_k, t), \quad i=0,\dots, N-1, \quad j=0,\dots, M-1,\\
+&\hspace{70mm}l=0,\dots, L-1.
+\end{split}
+\end{align}
+Подстановка \eqref{3_spect_approx_full} в уравнения \eqref{3_eqns_full} приводит к системе дифференциальных уравнений второго порядка относительно $\vect{\widehat{U}}$.
+
+Из уравнений \eqref{3_eqns_full}, \eqref{3_stress}, \eqref{3_strain} следует, что для реализации псевдоспектрального метода требуется реализовать операции дивергенции и градиента на заданной сетке в цилиндрических координатах.
+
+
 
 \section{Численные эксперименты}
 
@@ -1178,7 +1210,7 @@ $$
 \label{3_ic_v}
 &\qquad V_0(x, r) = -\nu r \pdiff{U_0}{x},& &\dot{V}_0 (x, r) = -c \pdiff{V_0}{x}&
 \end{flalign}
-На рисунке~\ref{fig:evol_compar1} слева изображена эволюция этого импульса и зарождение солитона при $A_0=0.01$, $W=20$. Исходный импульс испускает некоторые осцилляции и отрывается от них, что согласуется с моделью Буссинеска, согласно которой солитон имеет большую скорость, чем линейные волны. На рисунке справа представлено сравнение оторвавшегося импульса (<<экспериментального>> солитона) с <<теоретическим>> солитонном \eqref{soliton_v}. Если скорость теоретического солитона, являющуюся свободным параметром в \eqref{soliton_v}, подобрать так, чтобы она совпадала со скоростью экспериментального солитона, то последний имеет почти ту же длину, что и теоретический, но на 6\% большую амплитуду.
+На рисунке~\ref{fig:evol_compar1} слева изображена эволюция этого импульса и зарождение солитона при $A_0=0.01$, $W=20$ в стержне из полистирола, характеристики которого представлены в таблице~\ref{tab:ps}. Исходный импульс испускает некоторые осцилляции и отрывается от них, что согласуется с моделью Буссинеска, согласно которой солитон имеет большую скорость, чем линейные волны. На рисунке справа представлено сравнение оторвавшегося импульса (<<экспериментального>> солитона) с <<теоретическим>> солитонном \eqref{soliton_v}. Если скорость теоретического солитона, являющуюся свободным параметром в \eqref{soliton_v}, подобрать так, чтобы она совпадала со скоростью экспериментального солитона, то последний имеет почти ту же длину, что и теоретический, но на 6\% большую амплитуду.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.49\linewidth]{figures/evol}
@@ -1198,7 +1230,7 @@ $$
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.6\linewidth]{figures/evol_compar2}
-	\caption{Сравнение решений задачи Коши~\eqref{3_ic_u}, \eqref{3_ic_v} для полной модели и задачи Коши~\eqref{3_bq_ic} для упрощённой модели типа Буссинеска.}
+	\caption{Сравнение решений задачи Коши~\eqref{3_ic_u}, \eqref{3_ic_v} для полной модели и задачи Коши~\eqref{3_bq_ic} для регуляризованной модели Буссинеска.}
 	\label{fig:evol_compar2}
 \end{figure}
 
